--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Prata&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&family=Prata&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./scss/style.css" />
@@ -76,7 +76,324 @@
             </div>
           </div>
         </div>
+        <div class="main">
+          <div class="main__title">
+            <div class="main__title__text">
+              <p>
+                Услуги профессионального фотографа, привлечение к съемкам лучших
+                специалистов. Решение творческих и организационных задач любой
+                сложности. Создание рекламных фотографий и выразительных
+                портретов. Профессиональная работа в студии и на выезде.
+              </p>
+            </div>
+          </div>
+          <div class="main__career">
+            <div class="main__career__image">
+              <img src="./img/main_image_career.png" alt="main__image" />
+            </div>
+            <div class="main__career__card__container">
+              <div class="main__career__card">
+                <div class="main__career__card__digit">
+                  <p>9</p>
+                </div>
+                <div class="main__career__card__text">
+                  <p>лет опыта фотографии</p>
+                </div>
+              </div>
+              <div class="main__career__card">
+                <div class="main__career__card__digit">
+                  <p>100+</p>
+                </div>
+                <div class="main__career__card__text">
+                  <p>портретных съемок</p>
+                </div>
+              </div>
+              <div class="main__career__card">
+                <div class="main__career__card__digit">
+                  <p>12</p>
+                </div>
+                <div class="main__career__card__text">
+                  <p>публикаций в журналах</p>
+                </div>
+              </div>
+              <div class="main__career__card">
+                <div class="main__career__card__digit">
+                  <p>25</p>
+                </div>
+                <div class="main__career__card__text">
+                  <p>съемок знаменитостей</p>
+                </div>
+              </div>
+              <div class="main__career__card">
+                <div class="main__career__card__digit">
+                  <p>14</p>
+                </div>
+                <div class="main__career__card__text">
+                  <p>рекламных компаний</p>
+                </div>
+              </div>
+              <div class="main__career__card">
+                <div class="main__career__card__digit">
+                  <p>5</p>
+                </div>
+                <div class="main__career__card__text">
+                  <p>побед в конкурсах</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="main__portfolio">
+            <div class="main__portfolio__title">
+              <p>портфолио</p>
+            </div>
+            <div class="main__portfolio__image__container" id="container">
+              <div class="main__portfolio__image__card item">
+                <img src="./img/main_portfolio_image-1.png" alt="image_card" />
+              </div>
+              <div class="main__portfolio__image__card item">
+                <img src="./img/main_portfolio_image-3.png" alt="image_card" />
+              </div>
+              <div class="main__portfolio__image__card item">
+                <img src="./img/main_portfolio_image-5.png" alt="image_card" />
+              </div>
+              <div class="main__portfolio__image__card item">
+                <img src="./img/main_portfolio_image-7.png" alt="image_card" />
+              </div>
+              <div class="main__portfolio__image__card item">
+                <img src="./img/main_portfolio_image-2.png" alt="image_card" />
+              </div>
+              <div class="main__portfolio__image__card item">
+                <img src="./img/main_portfolio_image-4.png" alt="image_card" />
+              </div>
+              <div class="main__portfolio__image__card item">
+                <img src="./img/main_portfolio_image-6.png" alt="image_card" />
+              </div>
+              <div class="main__portfolio__image__card item">
+                <img src="./img/main_portfolio_image-8.png" alt="image_card" />
+              </div>
+            </div>
+          </div>
+          <div class="main__feedback__container">
+            <div class="main__feedback__title">
+              <p>отзывы</p>
+            </div>
+            <div class="main__feedback">
+              <div class="main__feedback__card">
+                <div class="main__feedback__card__uphead">
+                  <div class="main__feedback__card__uphead__photo">
+                    <img src="./img/ekaterina__feedback.png" alt="photo" />
+                  </div>
+                  <div class="main__feedback__card__uphead__info">
+                    <div class="main__feedback__card__uphead__info__name">
+                      <p>Екатерина</p>
+                    </div>
+                    <div class="main__feedback__card__uphead__info__years">
+                      <p>18 лет</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="main__feedback__card__subhead">
+                  <p>
+                    Я очень очень довольна результатом! Безумна рада что
+                    испонилась еще одня моя маленькая мечта))) когда я первый
+                    раз увидела твои фото в facebook я даже не могла
+                    предположить что попаду в твой объектив
+                  </p>
+                </div>
+              </div>
+              <div class="main__feedback__card">
+                <div class="main__feedback__card__uphead">
+                  <div class="main__feedback__card__uphead__photo">
+                    <img src="./img/kristina__feedback.png" alt="photo" />
+                  </div>
+                  <div class="main__feedback__card__uphead__info">
+                    <div class="main__feedback__card__uphead__info__name">
+                      <p>Кристина</p>
+                    </div>
+                    <div class="main__feedback__card__uphead__info__years">
+                      <p>25 лет</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="main__feedback__card__subhead">
+                  <p>
+                    Не просто хороший фотограф, но и прекрасный человек,
+                    фотографии получились совершенно необычные , он видит людей
+                    немного с другой стороны. Спасибо, за проведенное время,
+                    было очень весело и приятно с тобой пообщаться
+                  </p>
+                </div>
+              </div>
+              <div class="main__feedback__card">
+                <div class="main__feedback__card__uphead">
+                  <div class="main__feedback__card__uphead__photo">
+                    <img src="./img/regina__feedback.png" alt="photo" />
+                  </div>
+                  <div class="main__feedback__card__uphead__info">
+                    <div class="main__feedback__card__uphead__info__name">
+                      <p>Регина</p>
+                    </div>
+                    <div class="main__feedback__card__uphead__info__years">
+                      <p>23 года</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="main__feedback__card__subhead">
+                  <p>
+                    Встретившись, я была удивлена его подходом. Он пытается
+                    разговорить человека, понять его и раскрыть. Очень
+                    комфортный в общении, улавливает твое состояние и плавно,
+                    незаметно переходит к работе.
+                  </p>
+                </div>
+              </div>
+              <div class="main__feedback__card">
+                <div class="main__feedback__card__uphead">
+                  <div class="main__feedback__card__uphead__photo">
+                    <img src="./img/marina__feedback.png" alt="photo" />
+                  </div>
+                  <div class="main__feedback__card__uphead__info">
+                    <div class="main__feedback__card__uphead__info__name">
+                      <p>Мария</p>
+                    </div>
+                    <div class="main__feedback__card__uphead__info__years">
+                      <p>26 лет</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="main__feedback__card__subhead">
+                  <p>
+                    Большому кораблю, большое плавание! Максим, спасибо за
+                    незабываемую фотосессию, за твое видение и терпение.
+                    Спасибо, за то, что смог передать настроение и суть.
+                  </p>
+                </div>
+              </div>
+              <div class="main__feedback__card">
+                <div class="main__feedback__card__uphead">
+                  <div class="main__feedback__card__uphead__photo">
+                    <img src="./img/aleksandr__feedback.png" alt="photo" />
+                  </div>
+                  <div class="main__feedback__card__uphead__info">
+                    <div class="main__feedback__card__uphead__info__name">
+                      <p>Александр</p>
+                    </div>
+                    <div class="main__feedback__card__uphead__info__years">
+                      <p>30 лет</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="main__feedback__card__subhead">
+                  <p>
+                    Фотосессия с Максимом была одной из лучших и незабываемых.
+                    Он умеет правильно воплотить характер человека в фотографии.
+                    Очень легко было работать!
+                  </p>
+                </div>
+              </div>
+              <div class="main__feedback__card">
+                <div class="main__feedback__card__uphead">
+                  <div class="main__feedback__card__uphead__photo">
+                    <img src="./img/stefania__feedback.png" alt="photo" />
+                  </div>
+                  <div class="main__feedback__card__uphead__info">
+                    <div class="main__feedback__card__uphead__info__name">
+                      <p>Стефания</p>
+                    </div>
+                    <div class="main__feedback__card__uphead__info__years">
+                      <p>19 лет</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="main__feedback__card__subhead">
+                  <p>
+                    Ваш почерк для меня - это магия и мистика. Вы - гений. Гений
+                    места, гений изгибов и смыслов. Я счастлива, что ваш талант
+                    прикоснулся ко мне.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="main__price">
+            <div class="main__price__bg">
+              <img src="./img/bg_price.png" alt="" />
+            </div>
+            <div class="main__price__title">
+              <p>Стоимость</p>
+            </div>
+            <div class="main__price__text">
+              <p>
+                Стоимость может изменится из-за условий и пожеланий клиента. Для
+                уточнения деталей и финальной стоимости свяжитесь со мной,
+                уточнив в какие даты вам требуется съемка, а так же тип
+                фотосъёмки.
+              </p>
+            </div>
+            <div class="main__price__container">
+              <div class="main__price__card">
+                <div class="main__price__card__image">
+                  <img src="./img/card_price-1.svg" alt="card-image" />
+                </div>
+                <div class="main__price__card__text">
+                  <p>Съемка портретов</p>
+                </div>
+                <div class="main__price__card__price">
+                  <p>50 000 ₽</p>
+                </div>
+              </div>
+              <div class="main__price__card">
+                <div class="main__price__card__image">
+                  <img src="./img/card_price-2.svg" alt="card-image" />
+                </div>
+                <div class="main__price__card__text">
+                  <p>аренда студии</p>
+                </div>
+                <div class="main__price__card__price">
+                  <p>1 000 ₽ /час</p>
+                </div>
+              </div>
+              <div class="main__price__card">
+                <div class="main__price__card__image">
+                  <img src="./img/card_price-3.svg" alt="card-image" />
+                </div>
+                <div class="main__price__card__text">
+                  <p>Макияж, прическа</p>
+                </div>
+                <div class="main__price__card__price">
+                  <p>5 000 ₽</p>
+                </div>
+              </div>
+              <div class="main__price__card">
+                <div class="main__price__card__image">
+                  <img src="./img/card_price-4.svg" alt="card-image" />
+                </div>
+                <div class="main__price__card__text">
+                  <p>аренда одежды</p>
+                </div>
+                <div class="main__price__card__price">
+                  <p>10 000 ₽</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer">
+          <div class="footer__container">
+            <div class="footer__author">
+              <p>&copy Фотограф Максим Браун 2022</p>
+            </div>
+            <div class="footer__privacy">
+              <p>Политика конфиденциальности</p>
+            </div>
+          </div>
+          <div class="footer__develop">
+            <p>Разработка и маркетинг WebCanape</p>
+          </div>
+        </div>
       </div>
     </div>
+    <!-- <script src="./masonry.pkgd.min.js"></script>
+    <script src="./index.js"></script> -->
   </body>
 </html>
