--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
               <a href="#" class="header__info__button__text">записаться</a>
             </div>
           </div>
+          <div class="background__media">
+            <img src="./img/bg-image.png" alt="bg" class="backround__image" />
+          </div>
         </div>
         <div class="main">
           <div class="main__title">
@@ -147,28 +150,28 @@
               <p>портфолио</p>
             </div>
             <div class="main__portfolio__image__container" id="container">
-              <div class="main__portfolio__image__card item">
+              <div class="main__portfolio__image__card card-1">
                 <img src="./img/main_portfolio_image-1.png" alt="image_card" />
               </div>
-              <div class="main__portfolio__image__card item">
-                <img src="./img/main_portfolio_image-3.png" alt="image_card" />
-              </div>
-              <div class="main__portfolio__image__card item">
-                <img src="./img/main_portfolio_image-5.png" alt="image_card" />
-              </div>
-              <div class="main__portfolio__image__card item">
-                <img src="./img/main_portfolio_image-7.png" alt="image_card" />
-              </div>
-              <div class="main__portfolio__image__card item">
+              <div class="main__portfolio__image__card card-2">
                 <img src="./img/main_portfolio_image-2.png" alt="image_card" />
               </div>
-              <div class="main__portfolio__image__card item">
+              <div class="main__portfolio__image__card card-3">
+                <img src="./img/main_portfolio_image-3.png" alt="image_card" />
+              </div>
+              <div class="main__portfolio__image__card card-4">
                 <img src="./img/main_portfolio_image-4.png" alt="image_card" />
               </div>
-              <div class="main__portfolio__image__card item">
+              <div class="main__portfolio__image__card card-5">
+                <img src="./img/main_portfolio_image-5.png" alt="image_card" />
+              </div>
+              <div class="main__portfolio__image__card card-6">
                 <img src="./img/main_portfolio_image-6.png" alt="image_card" />
               </div>
-              <div class="main__portfolio__image__card item">
+              <div class="main__portfolio__image__card card-7">
+                <img src="./img/main_portfolio_image-7.png" alt="image_card" />
+              </div>
+              <div class="main__portfolio__image__card card-8">
                 <img src="./img/main_portfolio_image-8.png" alt="image_card" />
               </div>
             </div>
